home page alignments corrected

--- a/assets/styles/music.css
+++ b/assets/styles/music.css
@@ -158,8 +158,8 @@ b{
     }
 
     .card{
-        height:150px;
-        width: 150px;
+        height:160px;
+        width: 160px;
         background-color: white;
         display:flex;
         align-items: center;
@@ -185,8 +185,8 @@ b{
     }
 
     .img{
-        height:140px;
-        width: 140px;
+        height:150px;
+        width: 150px;
         transition: transform ease 1s;
     }
     h1{
